# Bookstore

Desktop/Bookstore/: db.sqlite3  pyproject.toml
Desktop/Bookstore/bookstore/: settings.py
Desktop/EBAC/Django/: pytest.ini
Desktop/base_exercicio_css_in_js-main/: package-lock.json  package.json
Desktop/base_exercicio_css_in_js-main/src/: App.tsx
